# sars_icu_analysis

./: README.md  environment.yml  pyproject.toml
examples/conn2res/: conn2res_brainplots.py  conn2res_group_analysis.py  conn2res_results.py  tutorial_conn2res_v2_real_data.py
examples/decoupling/: decoupling_brainnetome.py  decoupling_graphs_viz.py  decoupling_synthseg.py
examples/examples/: example_GNN.py  example_gnn_analysis.py  example_gradients.py  example_normative_comparison.py  example_null_models.py  example_null_models_02.py
examples/gradients/: gradients_01.py  gradients_02.py  gradients_bayesian.py  gradients_bayesian_viz.py
examples/tutorials/: tutorial_conn2res_masterclass.py  tutorial_conn2res_v2_real_data.py  tutorial_criticality.py  tutorial_decoupling.py  tutorial_reservoir.py
sars/: __init__.py  alff_metrics.py  atlas_manager.py  check_install.py  config.old  config.py  data.py  io.py  utils.py
sars/criticality/: __init__.py  avalanches.py  dfa.py  entropy.py  point_process.py
sars/eigenmorph/: __init__.py  core.py  parcellation.py  run_annot_fs.sh  synthetic.py  viz.py  viz_interactive.py
sars/gnn_multimodal/: __init__.py  analysis.py  config.old  config.py  contrastive.py  data_loader.old  data_loader.py  gat_sc_fc.py  gnn_connectome.py  training.old  training.py  viz.py
sars/gradients/: __init__.py  brain_viz.py  core.py  fast.py  fast_null.py  null_models.py  null_viz.py  viz.py
sars/graph_analysis/: __init__.py  community.py  gnn_models.py  multilayer.py  network_metrics.py  sc_fc_decoupling.py  viz_decoupling_graphs.py
sars/normative_comparison/: __init__.py  comparison_viz.py  config.py  control_data.py  harmonization.py  null_models.py  null_models_viz.py  statistics.py
sars/reservoir/: esn.py  reservoir_dynamics.py  reservoir_viz.py
sars/tractogram_bootstrap/: __init__.py  community.py  core.py  viz.py
sars/viz/: __init__.py  brain_plots.py  matrix_plots.py  visualization.py
